Quad-51: Edited css property in order to display background and text color of a button when it is disabled. Also fixed the text center align issue

--- a/Quadriga/src/main/webapp/resources/txt-layout/css/style.css
+++ b/Quadriga/src/main/webapp/resources/txt-layout/css/style.css
@@ -254,6 +254,10 @@
 		margin-top: 15px;
 	}
 
+	input[type=button]:disabled, button:disabled {
+		background-color: #778899;
+		color: #FFFFFF;
+	}
 		.button:hover, input.ui-button:hover
 		{
 			background: #ebe3b2;
